<resources>
    <string name="app_name">TagYou</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_lateralMenu">TagYou</string>

    <string name="facebook_app_id">292069404601274</string>
    <string name="fb_login_protocol_scheme">fb292069404601274</string>

    <string name="error_facebook_login_canceled">Login com o Facebook cancelado.</string>
    <string name="error_facebook_login_unknown_error">Erro desconhecido com o login com o Facebook, tente novamente e contate o administrador.</string>
    <string name="error_failed_signin_email_exists">Falha ao entrar\n\nEsse e-mail já está sendo usado em nosso sistema e dispositivo.\nTente novamente com outro método de login.</string>
    <string name="error_unknown_error">Erro desconhecido, tente novamente e contate o administrador.</string>
    <string name="error_signin">Algo deu errado ao fazer login, tente novamente.</string>
    <string name="error_password_too_small">Sua senha precisa ter pelo menos 6 caracteres, digite novamente.</string>
    <string name="error_invalid_email">Email inválido, digite novamente.</string>
    <string name="error_all_fields_required">Todos os campos são obrigatórios, tente novamente.</string>
    <string name="error_user_password_incorrect">Usuário e/ou senha incorreto(s).</string>
    <string name="error_invalid_user">Usuário não cadastrado.</string>
    <string name="error_failed_send_email_confirmation">Falha ao enviar o email de confirmação, por favor, tente novamente</string>
    <string name="error_email_not_confirmed">Email não confirmado, por favor, verifique seu email cadastrado e tente novamente</string>

    <string name="send_email_confirmation">Email de verificação enviado com sucesso para</string>
    <string name="user_created_successfully">Usuário criado com sucesso. Enviando email de confirmação da conta…</string>

    <string name="processing_login">Processando login, por favor aguarde…</string>
    <string name="processing">Processando…</string>

    <string name="done">done</string>
    <string name="tags_filter">tags_filter</string>

    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>

    <string name="phone_mask">(##)#####-####</string>
    <string name="birth_mask">##/##/####</string>
    <string name="postalCode_mask">#####-###</string>

    <string name="registry">registro</string>

    <string name="descricao_pessoal">Descrição Pessoal</string>
    <string name="descricao_empresarial">Descrição Empresarial</string>

    <string name="indication_person">Indique um Amigo</string>
    <string name="title_indication_person">Faça uma indicação e compartilhe os benefícios do TagYou…</string>
    <string name="text_indication_person">Indique um amigo para que ele aproveite as melhores promoções da região, ou
        indique uma empresa para ela aproveitar essa maravilhosa ferramenta de marketing.</string>
    <string name="indication_share_code">Compartinhe o código abaixo</string>
    <string name="indication_button_whatapp">Whatsapp</string>

    <string name="categoty_title">TagYou</string>
    <string name="categoty_text">Como você deseja fazer login?</string>
    <string name="categoty_pessoa">Pessoa</string>
    <string name="categoty_empresa">Empresa</string>

    <string name="edit_person">Cadastro Pessoal</string>
    <string name="edit_person_name">Nome</string>
    <string name="edit_person_date">Nascimento</string>
    <string name="edit_person_sex">Sexo</string>
    <string name="edit_person_email">Email</string>
    <string name="edit_person_phone">Telefone</string>
    <string name="edit_person_button_save">Salvar</string>
    <string name="edit_person_description_one">Faça uma breve descrição do que você oferece</string>
    <string name="edit_person_description_two">Faça uma breve descrição do que você deseja</string>
    <string name="edit_person_social_network">Insira o link da sua rede social</string>

    <string name="edit_photo">Clique na foto e faça a alteração</string>
    <string name="edit_company">Cadastro Empresa</string>
    <string name="edit_company_name">Nome</string>
    <string name="edit_company_description">Descrição</string>
    <string name="edit_company_city">Cidade</string>
    <string name="edit_company_street">Rua</string>
    <string name="edit_company_number">Número</string>
    <string name="edit_company_email">Email</string>
    <string name="edit_company_phone">Telefone</string>
    <string name="edit_company_button_save">Salvar</string>
    <string name="edit_company_segment">Segmento</string>
    <string name="edit_company_description_one">Faça uma breve descrição do que você oferece</string>
    <string name="edit_company_description_two">Faça uma breve descrição do que você deseja</string>
    <string name="edit_company_social_network">Insira o link da sua rede social</string>

    <string name="details_person_email">Email</string>
    <string name="details_person_phone">Telefone</string>
    <string name="details_person_date">Nascimento</string>
    <string name="details_person_chat">Chamar no chat</string>

    <string name="sign_up_text">Faça o seu cadastro e desfrute das nossas vantagens!</string>
    <string name="sign_up_user">Criando o usuário, por favor aguarde…</string>
    <string name="sign_up_name">Nome</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Senha</string>
    <string name="sign_up_code_indication">Código de Indicação</string>
    <string name="sign_up_text_photo">Insira sua foto de perfil</string>
    <string name="sign_up_button">Finalizar Cadastro</string>

    <string name="hint_indication">Insira o código de indicação</string>
    <string name="login_title">TagYou</string>
    <string name="login_email">Email</string>
    <string name="login_senha">Senha</string>
    <string name="login_faca_seu_cadastro">Não é membro? Faça seu cadastro</string>
    <string name="login_forgot_password">Recupere a sua senha!</string>
    <string name="login_botton_entrar">Entrar</string>
    <string name="login_ou">-------------------------ou-------------------------</string>

    <string name="forgot_password_title">Recupere a sua senha</string>
    <string name="forgot_password_email">Digite seu email</string>
    <string name="forgot_password_button_send">Enviar</string>
    <string name="forgot_password_button_cancel">Cancelar</string>

    <string name="tags_filter_text">Selecione as suas preferências</string>
    <string name="tags_filter_affinity">Afinidades</string>
    <string name="tags_filter_group">Grupos</string>
    <string name="tags_filter_Segments">Segmentos</string>
    <string name="tags_filter_button_save">Salvar</string>

    <string name="item_company_persons">Pessoas gostam</string>

    <string name="message_area_text">Digite aqui…</string>

    <string name="nav_header_exit">Sair</string>

    <string name="contact_title">Fale Conosco</string>
    <string name="error_failed_send_email_to_reset">Falha ao enviar o email para recuperar sua conta.\n\nConta não registrada</string>
    <string name="email_successfully_sent">Email para resetar sua senha enviado com sucesso</string>
    <string name="send_cancelled_email">Recuperação de email cancelada</string>
    <string name="error_need_select_profile_picture">É preciso selecionar uma foto de perfil</string>
    <string name="uploading_image">Fazendo upload da imagem…</string>
    <string name="edit_company_address">Endereço</string>

    <string name="spefic_tags_title">Selecione as suas preferências.</string>

    <string name="config_label">Configurações</string>
    <string name="config_title">Personalize de acordo com seus interesses de busca.</string>
    <string name="config_radius">Selecione raio de localização</string>
    <string name="config_age">Selecione Idade</string>
    <string name="config_sex">Selecione Sexo</string>
    <string name="config_masc">Masculino</string>
    <string name="config_fem">Feminino</string>
    <string name="config_others">Outros</string>

    <!--<string name="app_name">iBeaconDetector</string>-->
    <string name="ble_not_supported">BLE not supported on this device.</string>
    <string name="bt_not_supported">Bluetooth not supported on this device.</string>
    <string name="bt_not_enabled">Bluetooth is not enabled, turn it on.</string>
    <string name="label_ibeacon">This is iBeacon!</string>
    <string name="label_not_ibeacon">This is not iBeacon.</string>
    <!-- Scan -->
    <string name="action_clear">CLEAR LIST</string>
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <string name="action_dump">DUMP CSV</string>
    <string name="action_license">LICENSE</string>
    <!-- dialog -->
    <string name="license_title">OSS LICENSE</string>
    <string name="license_body">RadiusNetworks / android-ibeacon-service\nhttps://github.com/RadiusNetworks/android-ibeacon-service</string>
    <!-- dump -->
    <string name="dump_failed">Dump Failed.</string>
    <string name="dump_succeeded_suffix"> Dump Succeeded.</string>
</resources>
