<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comcesar1287.github.tagyou.view.IndicationPersonActivity">

    <TextView
        android:id="@+id/title_indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_indication_person"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"/>

    <TextView
        android:id="@+id/text_indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_indication_person"
        android:textSize="19sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_below="@id/title_indication"/>

    <ImageView
        android:id="@+id/image_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/tagyou_sharing"
        android:layout_below="@id/text_indication"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/code_indication_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indication_share_code"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/image_share"/>

    <TextView
        android:id="@+id/code_indication"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/code_indication_text"
        android:text="YHDSHDHSDH"
        android:gravity="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_indication_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/concrete"
        android:text="@string/indication_button_whatapp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:onClick="teste"/>

</RelativeLayout>
