<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/forgot_title"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/forgot_title"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/forgot_password_email"
                android:textSize="15sp"
                android:inputType="textEmailAddress">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/forgot_password_button_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_button_cancel"
            android:layout_marginTop="29dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/forgot_email"
            android:background="@drawable/button_frag"/>

        <Button
            android:id="@+id/forgot_password_button_send"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_button_send"
            android:layout_marginTop="29dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/forgot_email"
            android:background="@drawable/button_frag"/>

    </RelativeLayout>

</FrameLayout>
