<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackgroundSplash"
        tools:context="comcesar1287.github.tagyou.view.EditPersonActivity">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TagYou"
                android:textSize="50sp"
                android:textColor="@color/colorTagYou"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tagyou_tag"
                android:layout_gravity="end"/>
        </LinearLayout>


        <ImageView
            android:id="@+id/register_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_hashtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_photo"
            android:hint="@string/hint_indication"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:digits="0123456789qwertzuiopasdfghjklyxcvbnm"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_hashtag"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_company_name"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/title_segment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_company_segment"
            android:textColor="@color/concrete"
            android:layout_below="@id/register_name"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"/>

        <Spinner
            android:id="@+id/register_spinner_segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_segment"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="7dp">
        </Spinner>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_spinner_segment"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_company_city"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_city"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_company_address"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_street"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_company_number"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_number"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_company_email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_below="@id/register_email"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/edit_company_phone"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/description_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_company_description_one"
            android:layout_below="@id/register_phone"
            android:textColor="@color/concrete"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <EditText
            android:id="@+id/edit_description_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/description_one"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:padding="2dp"
            android:background="@drawable/border"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <TextView
            android:id="@+id/description_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_company_description_two"
            android:layout_below="@id/edit_description_offer"
            android:layout_marginTop="9dp"
            android:textColor="@color/concrete"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <EditText
            android:id="@+id/edit_description_desire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/description_two"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:layout_marginTop="2dp"
            android:padding="2dp"
            android:background="@drawable/border"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <TextView
            android:id="@+id/social_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_company_social_network"
            android:layout_below="@id/edit_description_desire"
            android:layout_marginTop="9dp"
            android:textColor="@color/concrete"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <EditText
            android:id="@+id/edit_social_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/social_network"
            android:inputType="textWebEmailAddress"
            android:maxLength="500"
            android:layout_marginTop="2dp"
            android:padding="2dp"
            android:background="@drawable/border"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/concrete"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/edit_social_network"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/advance"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/white"
                android:background="@color/concrete"
                android:text="@string/edit_company_button_save"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>